# python-module

./: .bumpversion.cfg  .clang-format  .gitignore  .gitlab-ci - Kopie.yml  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  deployment.pri  gtlab_python.pro  settings.pri
src/batch/: CMakeLists.txt  batch-script.cpp  batch-script.rc.license  batch.pro  icon.ico.license
src/module/: CMakeLists.txt  gt_compat.h  gt_python.cpp  gt_python.h  gt_python.json  gt_python_1_7.json  gt_pythonmodule_exports.h  gtpy_icons_compat.h  gtpy_scriptcollectionsettings.cpp  gtpy_stylesheet_compat.h  module.pro
src/module/calculators/: gtpy_scriptcalculator.cpp  gtpy_scriptcalculator.h
src/module/collection/: gtpy_collectionwidget.cpp  gtpy_collectionwidget.h  gtpy_scriptcollectionsettings.cpp  gtpy_scriptcollectionsettings.h
src/module/collection/browser/: gtpy_abstractbrowseritem.cpp  gtpy_abstractbrowseritem.h  gtpy_abstractcollectionitem.cpp  gtpy_abstractcollectionitem.h  gtpy_browseritem.cpp  gtpy_browseritem.h  gtpy_collapsiblebrowseritem.cpp  gtpy_collapsiblebrowseritem.h  gtpy_collectionbrowser.cpp  gtpy_collectionbrowser.h  gtpy_collectionbrowsermodel.cpp  gtpy_collectionbrowsermodel.h  gtpy_collectionbrowsermodelitem.cpp  gtpy_collectionbrowsermodelitem.h  gtpy_collectionbrowsersortmodel.cpp  gtpy_collectionbrowsersortmodel.h  gtpy_collectioncollapsibleitem.cpp  gtpy_collectioncollapsibleitem.h  gtpy_collectionitem.cpp  gtpy_collectionitem.h  gtpy_collectionrootitem.cpp  gtpy_collectionrootitem.h  gtpy_rootbrowseritem.h
src/module/collection/itemwidget/: gtpy_collectionitemwidget.cpp  gtpy_collectionitemwidget.h
src/module/collection/localwidget/: gtpy_abstractlocalitem.cpp  gtpy_abstractlocalitem.h  gtpy_collapsiblelocalitem.cpp  gtpy_collapsiblelocalitem.h  gtpy_collectionlocalmodel.cpp  gtpy_collectionlocalmodel.h  gtpy_collectionlocalwidget.cpp  gtpy_collectionlocalwidget.h  gtpy_collectionwidget.cpp  gtpy_collectionwidget.h  gtpy_collectionwidgetmodel.cpp  (+3 more)
src/module/connection/: gtpy_connection.cpp  gtpy_connection.h  gtpy_connectioncontainer.cpp  gtpy_connectioncontainer.h  gtpy_connectiondock.cpp  gtpy_connectiondock.h  gtpy_connectionmodel.cpp  gtpy_connectionmodel.h  gtpy_pythonconnection.cpp  gtpy_pythonconnection.h
src/module/context/: gtpy_code.cpp  gtpy_code.h  gtpy_context.cpp  gtpy_context.h  gtpy_contextinit.cpp  gtpy_contextinit.h  gtpy_module.cpp  gtpy_module.h
src/module/data/: gtpy_directory.cpp  gtpy_directory.h  gtpy_file.cpp  gtpy_file.h  gtpy_scriptpackage.cpp  gtpy_scriptpackage.h
src/module/extensions/: gtpy_pythonfunctions.cpp  gtpy_pythonfunctions.h
src/module/models/: gtpy_completermodel.cpp  gtpy_completermodel.h  gtpy_objectmodel.cpp  gtpy_objectmodel.h  gtpy_taskitemmodel.cpp  gtpy_taskitemmodel.h  gtpy_taskstylemodel.cpp  gtpy_taskstylemodel.h
src/module/post/: gtpy_pythonplotconfigdialog.cpp  gtpy_pythonplotconfigdialog.h  gtpy_pythonplotdata.cpp  gtpy_pythonplotdata.h  gtpy_pythonplotitem.cpp  gtpy_pythonplotitem.h  gtpy_pythonplotwidget.cpp  gtpy_pythonplotwidget.h  gtpy_pythonsvgwidget.cpp  gtpy_pythonsvgwidget.h
src/module/processcomponents/: gtpy_abstractscriptcomponent.cpp  gtpy_abstractscriptcomponent.h  gtpy_scriptcalculator.cpp  gtpy_scriptcalculator.h  gtpy_task.cpp  gtpy_task.h
src/module/tasks/: gtpy_task.cpp  gtpy_task.h
src/module/utilities/: gtpy_calculatorfactory.cpp  gtpy_calculatorfactory.h  gtpy_code.cpp  gtpy_code.h  gtpy_codegen.cpp  gtpy_codegen.h  gtpy_codegenerator.cpp  gtpy_codegenerator.h  gtpy_constants.h  gtpy_context.cpp  gtpy_context.h  gtpy_contextmanager.cpp  gtpy_contextmanager.h  gtpy_convert.cpp  gtpy_convert.h  gtpy_decorator.cpp  gtpy_decorator.h  gtpy_gilscope.cpp  gtpy_gilscope.h  gtpy_globals.cpp  gtpy_globals.h  gtpy_importfunction.cpp  gtpy_importfunction.h  gtpy_interruptrunnable.cpp  gtpy_interruptrunnable.h  gtpy_matplotlib.h  gtpy_module.cpp  gtpy_module.h  gtpy_moduleupgrader.cpp  gtpy_moduleupgrader.h  gtpy_packageiteration.h  gtpy_processdatadistributor.cpp  gtpy_processdatadistributor.h  gtpy_regexp.cpp  gtpy_regexp.h  gtpy_scriptrunnable.cpp  gtpy_scriptrunnable.h  gtpy_shortcut.cpp  gtpy_shortcut.h  gtpy_stdout.cpp  (+17 more)
src/module/widgets/: gtpy_completer.cpp  gtpy_completer.h  gtpy_connectiondock.cpp  gtpy_connectiondock.h  gtpy_console.cpp  gtpy_console.h  gtpy_lineedit.cpp  gtpy_lineedit.h  gtpy_replacewidget.cpp  gtpy_replacewidget.h  gtpy_scripteditor.cpp  gtpy_scripteditor.h  gtpy_scripteditorwidget.cpp  gtpy_scripteditorwidget.h  gtpy_scriptview.cpp  gtpy_scriptview.h  gtpy_taskdelegate.cpp  gtpy_taskdelegate.h  gtpy_tasktreeview.cpp  gtpy_tasktreeview.h
src/module/wizards/: gtpy_abstractscriptingwizardpage.cpp  gtpy_abstractscriptingwizardpage.h  gtpy_editorsettingsdialog.cpp  gtpy_editorsettingsdialog.h  gtpy_scriptevalworker.cpp  gtpy_scriptevalworker.h  gtpy_wizardgeometries.cpp  gtpy_wizardgeometries.h  gtpy_wizardgeometryitem.cpp  gtpy_wizardgeometryitem.h  gtpy_wizardsettings.cpp  gtpy_wizardsettings.h  gtpy_wizardsettingsitem.cpp  gtpy_wizardsettingsitem.h
src/resource_module/: CMakeLists.txt
src/resource_module/cmake/: GTlab.cmake  GTlabResourceModuleConfig.in
src/resource_module/src/: CMakeLists.txt
src/setup_module/: CMakeLists.txt  find_libpython.h  gt_python_setup.cpp  gt_python_setup.h  gt_python_setup.json  gt_pythonpreferencepage.cpp  gt_pythonpreferencepage.h  gt_pythonpreferencepage.ui  gtps_constants.h  gtps_globals.cpp  gtps_globals.h  gtps_pythonevaluator.cpp  gtps_pythonevaluator.h  gtps_pythoninterpreter.cpp  gtps_pythoninterpreter.h  gtps_pythonpreferencepage.cpp  gtps_pythonpreferencepage.h  gtps_pythonpreferencepage.ui  gtps_pythonpreferencepage.ui.license  gtps_systemsettings.cpp  gtps_systemsettings.h  resources.qrc  setup_module.pro
tests/unittests/: CMakeLists.txt  main.cpp  runUnittests.bat  runUnittests.sh  runUnittestsQt512.bat  runUnittestsQt515.bat  test_codegen.cpp  test_codegenerator.cpp  test_contextconfig.cpp  test_helper.h  test_variantconvert.cpp  unittests.pro
tests/unittests/cmake/: RequireQt.cmake
(+142 files in other folders)
